<resources>
    <string name="app_name">AURA</string>
    <string name="welcome_msg">Welcome to</string>
    <string name="open_page">AURA</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="signup">Sign up</string>
    <string name="content_description">logo</string>

    //login page components
    <string name="etUsername">Username</string>
    <string name="etPassword">Password</string>

    //Register page components
    <string name="etEmail">Email</string>
    <string name="etConfirmPassword">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>

    //Personal questions 1 components
    <string name="questionAge">How old are you?</string>
    <string name="ageOption1">Less than 18</string>
    <string name="ageOption2">18–21</string>
    <string name="ageOption3">22–26</string>
    <string name="ageOption4">More than 27</string>
    <string name="btnNext">Next</string>
    <string name="skip_question">Skip this question</string>

    //Personal questions 2 components
    <string name="questionOcc">What is your occupation?</string>
    <string name="ansStudent">Student</string>
    <string name="ansWork">Working</string>
    <string name="ansUnemployed">Unemployed</string>
    <string name="ansParent">Stay at home parent</string>

    //Accounts strings
    <string name="btnSettings">Settings</string>
    <string name="btnPrivacy">Privacy</string>
    <string name="btnLanguages">Languages</string>
    <string name="btnGetHelp">Get Help</string>
    <string name="btnTerms">Terms and Conditions</string>
    <string name="btnAboutAura">About Aura</string>
    <string name="btnLogout">Log out</string>
    <string name="btnFriends">Friends</string>
    <string name="tvAccount">Account</string>

    //Challenges main page components
    <string name="challenges">Challenges</string>
    <string name="btnDailyChallenge">Accept Today\'s Challenge</string>
    <string name="tvMiniChallenges">Mini Challenges:</string>
    <string name="btnSubmitImage">Submit Image</string>
    <string name="challenge_completed_message">Challenge Completed!</string>
    <string name="challenge_status_placeholder">Your placeholder text here</string>

    //Tutorial page components
    <string name="tutorialTitle">Tutorial</string>
    <string name="tutorial">
        Hi! Thank you for downloading Aura! Get ready for a time of fun and adventure! \n\nEveryday, you\'ll get a Main Challenge to complete. To start the challenge, click on the "Accept Today\s Challenge" button. Once you do, you have 24 hours to complete the challenge. If you don\'t, AuraPoints will be taken off. Once completed, You will gain 50 AuraPoints. \n\nYou\'ll also find Mini Challenges; completing one will give you 5-20 AuraPoints, depending on the difficulty. \nThese are the two things you should know before starting.\n\nGood luck and have fun! \n~The Creators
    </string>
    <string name="btnGetStarted">Get Started!</string>

    //Accepted challenges components
    <string name="tvAccepted">Challenge Accepted!</string>
    <string name="tvAnnounceChallenge">Today\'s Challenge:</string>
    <string name="tvFakeChallenge">Jump</string>
    <string-array name="fakeMinis">
        <item>Mini 1</item>
        <item>Mini 2</item>
        <item>Mini 3</item>
        <item>Mini 4</item>
        <item>Mini 5</item>
        <item>Mini 6</item>
    </string-array>
    <string name="btnPicture">Take a pic!</string>
    <string name="ivPicture">Picture to be submitted for the challenge</string>

    //Completed challenge page components
    <string name="tvCongrats">Congratulations!</string>
    <string name="tvCompleted">You have completed today\'s challenge!</string>
    <string name="btnSurprise">Surprise challenge</string>
    <string name="btnBackHome">Back Home</string>

    //Failed Challenge page components
    <string name="tvOops">Oops!</string>
    <string name="tvFailed">Challenge Failed!</string>
    <string name="delete_account">Delete account</string>
    <string name="change_password">Change password</string>
    <string name="save_changes">Save changes</string>
    <string name="phone_number">Phone number</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="e_mail">E-mail</string>
    <string name="about_aura">About AURA</string>
    <string name="profile">Profile</string>
    <string name="get_help">Get Help</string>
    <string name="privacy">Privacy</string>
    <string name="settings">Settings</string>
    <string name="challenges_achieved_icon">Challenges Achieved Icon</string>
    <string name="aura_points_icon">Aura Points Icon</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="account">Account</string>
    <string name="aura_points">Aura Points</string>
    <string name="challenges_achieved">Challenges \nAchieved</string>
    <string name="log_out">Log out</string>
    <string name="sign_out">Sign out</string>
    <string name="account_name">Account</string>
    <string name="challenges_achieved_text">Challenges Achieved</string>
    <string name="friends">Friends</string>
    <string name="home">Home</string>
</resources>