<!-- activity_personal_questions_1.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questionAge"
        android:textSize="18sp"
        android:layout_marginTop="24dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/radio_less_than_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ageOption1"/>

        <RadioButton
            android:id="@+id/radio_18_21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ageOption2"/>

        <RadioButton
            android:id="@+id/radio_22_26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ageOption3"/>

        <RadioButton
            android:id="@+id/radio_more_than_27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ageOption4"/>
    </RadioGroup>

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnNext"
        android:layout_marginTop="24dp"/>

</LinearLayout>
