<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0EBE3"
    tools:context=".AccountActivity">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/top_card_layout"
        android:layout_width="414dp"
        android:layout_height="124dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_corners_topcard"
        android:gravity="bottom|center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/profile_icons_row"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Profile Icons Row -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_icons_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/settings_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_card_layout">

        <ImageButton
            android:id="@+id/profile_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/nothing"
            android:contentDescription="@string/profile_icon"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:padding="16dp"
            android:src="@drawable/profile_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/aura_points_icon"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/profileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            app:layout_constraintStart_toStartOf="@id/profile_icon"
            app:layout_constraintEnd_toEndOf="@id/profile_icon"
            app:layout_constraintTop_toBottomOf="@id/profile_icon" />

        <ImageButton
            android:id="@+id/aura_points_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/nothing"
            android:contentDescription="@string/aura_points_icon"
            android:scaleType="centerInside"
            android:padding="12dp"
            android:src="@drawable/aura_points_icon"
            app:layout_constraintStart_toEndOf="@id/profile_icon"
            app:layout_constraintEnd_toStartOf="@id/challenges_achieved_icon"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/auraPointsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aura_points"
            app:layout_constraintStart_toStartOf="@id/aura_points_icon"
            app:layout_constraintEnd_toEndOf="@id/aura_points_icon"
            app:layout_constraintTop_toBottomOf="@id/aura_points_icon"/>

        <ImageButton
            android:id="@+id/challenges_achieved_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/nothing"
            android:padding="12dp"
            android:contentDescription="@string/challenges_achieved_icon"
            android:scaleType="centerInside"
            android:src="@drawable/achieved_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/aura_points_icon"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/challengesAchievedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/challenges_achieved"
            app:layout_constraintStart_toStartOf="@id/challenges_achieved_icon"
            app:layout_constraintEnd_toEndOf="@id/challenges_achieved_icon"
            app:layout_constraintTop_toBottomOf="@id/challenges_achieved_icon"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Settings List -->
    <LinearLayout
        android:id="@+id/settings_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/profile_icons_row"
        tools:layout_editor_absoluteX="-16dp">

        <Button
            android:id="@+id/settings_button"
            style="@style/CustomButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/settings"
            android:textColor="#5D4037"
            android:textSize="16sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/privacy_button"
            style="@style/CustomButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/privacy"
            android:textColor="#5D4037"
            android:textSize="16sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/help_button"
            style="@style/CustomButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/get_help"
            android:textColor="#5D4037"
            android:textSize="16sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/about_button"
            style="@style/CustomButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/about_aura"
            android:textColor="#5D4037"
            android:textSize="16sp"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

    <!-- Bottom Navigation -->

<Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:backgroundTint="@color/signUpButtonColor"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_list"
        app:layout_constraintVertical_bias="0.019"
    tools:ignore="VisualLintButtonSize" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/signUpButtonColor"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintBottomNav" />

</androidx.constraintlayout.widget.ConstraintLayout>
