<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130sp"
        android:orientation="vertical"
        android:background="@drawable/challenges_top_card"
        android:padding="16sp"
        android:paddingBottom="24dp"
        android:gravity="bottom|center">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/challenges"
           android:textSize="35sp"
           android:textStyle="bold"
           android:textColor="@color/signUpButtonColor"
           android:textAlignment="center"/>
    </LinearLayout>

    <Button
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/btnDailyChallenge"
        android:textSize="20sp"
        android:backgroundTint="@color/signUpButtonColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/tvMiniChallenges"
        android:textColor="@color/signUpButtonColor"
        android:textSize="22sp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>