<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:ignore="ExtraText">

    <!-- Header Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_corners_topcard"
        android:padding="16sp"
        android:paddingBottom="24dp"
        android:gravity="bottom|center">

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textAlignment="center"/>
    </LinearLayout>

    <!-- Progress Bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="50dp"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/progress_active"
            android:layout_margin="4dp"/>

        <View
            android:layout_width="16dp"
            android:layout_height="2dp"
            android:background="@color/progress_active_color"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/progress_active"
            android:layout_margin="4dp"
            tools:ignore="ImageContrastCheck" />

        <View
            android:layout_width="16dp"
            android:layout_height="2dp"
            android:background="@color/progress_active_color"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/progress_active"
            android:layout_margin="4dp"
            tools:ignore="ImageContrastCheck" />

        <View
            android:layout_width="16dp"
            android:layout_height="2dp"
            android:background="@color/progress_inactive_color"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/progress_inactive"
            android:layout_margin="4dp"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <!-- Question Text -->
    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questionOcc"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/orange" />

    <!-- Buttons for Age Options -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/ansStudent"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/ansStudent"
            android:textSize="16sp"
            android:backgroundTint="@color/orange"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            android:theme="@style/Base.Widget.AppCompat.Button" />

        <Button
            android:id="@+id/ansWorking"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/ansWork"
            android:textSize="16sp"
            android:backgroundTint="@color/orange"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            android:theme="@style/Base.Widget.AppCompat.Button" />

        <Button
            android:id="@+id/ansUnemployed"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/ansUnemployed"
            android:textSize="16sp"
            android:backgroundTint="@color/orange"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            android:theme="@style/Base.Widget.AppCompat.Button" />

        <Button
            android:id="@+id/ansParent"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/ansParent"
            android:textSize="16sp"
            android:backgroundTint="@color/orange"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            android:theme="@style/Base.Widget.AppCompat.Button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textViewSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/skip_question"
            android:textSize="16sp"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_marginTop="16dp"
            android:paddingBottom="16dp"/>
    </LinearLayout>
</LinearLayout>
