<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_msg"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_below="@id/welcome_text"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:src="@drawable/aura_vector_logo"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:backgroundTint="@android:color/white"
        android:onClick="onClickGoLoginPage"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_icon"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/white"
        android:onClick="onClickGoRegister"
        android:text="@string/btn_register"
        android:textAllCaps="false"
        android:textColor="#DD2C00"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
